--- a/practice01-html-git-css.html
+++ b/practice01-html-git-css.html
@@ -2,33 +2,90 @@
 
 <html>
   <head>
-    <title>01 HTML Git CSS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <title>01 HTML Git CSS</title>
   </head>
   <body>
-    <h1 class="main-heading">
-      Rick and Morty Currency Converter-Thingy-Mabobber
-    </h1>
-    <h2 class="white-text"> Currency Converter </h2>
-    <a href="https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/14419521/gallery_hero_9f0ff2eb-68bf-40eb-b9fc-fa3aa6e25958.jpg" target="_blank">
-        <img
-          class="main-image" style="margin: auto; padding-left: 450px;"
-          src="https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/14419521/gallery_hero_9f0ff2eb-68bf-40eb-b9fc-fa3aa6e25958.jpg"
-          alt="Puppy Photo Link"
-        />
-    </a>
-    <div>
-        <h3 style="padding-left: 500px;">Right now this is nothing.... I am still working here</h3>
-    </div>
-    <div class="dropdown">
-      <form>
-        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Pick a Currency</button>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a role="menuitem" tableindex="-1" href="#">HTML</a></li>
-        </ul>
-        <button>Submit</button>
-      </form>
+    <header class="main-heading">
+      <h1>Rick and Morty Currency Converter-Thingy-Mabobber</h1>
+    </header>
+    <div class="container">
+      <h2> Currency Converter </h2>
+      <a href="https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/14419521/gallery_hero_9f0ff2eb-68bf-40eb-b9fc-fa3aa6e25958.jpg" target="_blank">
+          <img
+            class="main-image"
+            src="https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/14419521/gallery_hero_9f0ff2eb-68bf-40eb-b9fc-fa3aa6e25958.jpg"
+            alt="Puppy Photo Link"
+          />
+      </a>
+      <div class="flex-container">
+          <h2>Currency Details</h2>
+          <table class="currency-table">
+            <tr id="main-table-row">
+              <th>Currency Name</th>
+              <th>Denomination</th>
+              <th>Need Ideas For Category</th>
+              <th>Acceptability</th>
+              <th>Location of Use</th>
+            </tr>
+            <tr>
+              <td>Schmeckle</td>
+              <td>25</td>
+              <td>N/A</td>
+              <td>Yes</td>
+              <td>Giants Dimension</td>
+            </tr>
+            <tr>
+              <td>Brapple</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+            </tr>
+            <tr>
+              <td>Blemflarck</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+            </tr>
+            <tr>
+              <td>Flurbo</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+            </tr>
+            <tr>
+              <td>Smidgen</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+            </tr>
+          </table>
+          <br>
+          <div>
+            <div>
+              <form>
+                <input placeholder="Currency 1">
+                <input placeholder="Currency 2">
+              </form>
+            </div>
+            <br>
+            <div class="dropdown-button">
+              <button class="drop-down-btn">Option 1</button>
+              <button class="drop-down-btn">Option 2</button>
+            </div>
+          </div>
+      </div>
     </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
